--- a/index.html
+++ b/index.html
@@ -5,8 +5,45 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Digital Agency</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <nav class="nav-container">
+            <div class="nav-logo">
+                <img src="asset/logo/logo.png" alt="">
+            </div>
+            <div class="menu-container">
+                <ul class="item-container">
+                    <li class="item">Home</li>
+                    <li class="item">Service</li>
+                    <li class="item">About</li>
+                    <li class="item">Contact</li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+    <main>
+        <section class="banner-container">
+            <div class="banner-details">
+                <h1 class="banner-title"> <span class="primary-color">Digital</span> Agency You <br>
+                    Can Rely Upon !</h1>
+                    <p class="banner-description">
+                        Hymenaeos! Omnis arcu vitae? Phasellus irure cupidatat incidunt, semper metus, nibh adipisci assumenda odio, quos, senectus vehicula occaecat, officiis malesuada cras.
+                    </p>
+                    <div>
+                        <button class="btn-primary">Discover More</button>
+                        <button class="btn-secondary">Hire us now</button>
+                    </div>
+            </div>
+            
+        </section>
+        <section>
+
+        </section>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
